# ai-engineering-from-scratch-learn

phases/00-setup-and-tooling/: pyproject.toml
phases/00-setup-and-tooling/05-jupyter-notebooks/code/: 01-timeit.ipynb  02-csv-pandas.ipynb  03-run-notebook-tips.ipynb
phases/00-setup-and-tooling/09-data-management/code/: 01-load-glue-dataset.py
phases/05-nlp-foundations-to-advanced/02-bag-of-words-tfidf/: quiz.json
