[project]
name = "00-setup-and-tooling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
]

# Install torch, torchaudio manually via uv pip install --torch-backend=auto